@@ -57,6 +57,11 @@ if ( isset($_SESSION['session_expired_post']) ) {
     sqsession_unregister('session_expired_post');
 }
 
+if(!sqgetGlobalVar('mailto', $mailto)) {
+    $mailto = '';
+}
+
+
 is_logged_in();
 
 do_hook('webmail_top');
@@ -138,6 +143,8 @@ if ($right_frame == 'right_main.php') {
     $right_frame_url = 'options.php';
 } elseif ($right_frame == 'folders.php') {
     $right_frame_url = 'folders.php';
+} elseif ($right_frame == 'compose.php') {
+    $right_frame_url = 'compose.php?' . $mailto;
 } else if ($right_frame == '') {
     $right_frame_url = 'right_main.php';
 } else {
