@@ -45,7 +45,8 @@ Version 1.4.5 - CVS
   - Give an error to the user when SquirrelMail is not configured yet
     (instead of "failed to include config.php").
   - Fixed bug #1124764, view unsafe images inside printer friendly view.
-  - Fixed bug #1032366, remove NUL characters in text attachments on sent. 
+  - Fixed bug #1032366, remove NUL characters in text attachments on sent.
+  - Re-introduced mailto: handling.
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
